examples/test/testpolicy7437.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7437
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key36: value1
      key48: value2
      key37: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value12
      podSelector:
        matchLabels:
          key11: value30
